# smart-toll-plaza-system

./: .gitignore  CHECKPOINT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  PROJECT_SAVED.txt  QUICK_REFERENCE.md  QUICK_START.md  README.md  WORK_SAVED.md  _extract_docx.py  compose.debug.yaml
backend/: .env  .env.example  Dockerfile  README.md  celery_broker.db  celery_results.db  docker-compose.yml  manage.py  populate_classes.py  populate_vehicle_classes.py  pyproject.toml  requirements.txt  verify_installation.py
backend/smarttoll/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/smarttoll/toll/: admin.py  api.py  apps.py  broadcast.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  views.py
backend/smarttoll/toll/migrations/: 0001_initial.py  0002_rename_toll_vehicl_timesta_9c3fbd_idx_toll_vehicl_timesta_b7099b_idx_and_more.py  0003_populate_vehicle_classes.py  0004_add_progress_to_videoupload.py
backend/smarttoll/toll/templates/registration/: login.html
backend/smarttoll/toll/templates/toll/: dashboard.html
docs/: SRS_SmartT.docx
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  api.js
frontend/src/components/: EventFeed.jsx  HourlyChart.jsx  StatsBar.jsx  VehicleClassCards.jsx  VideoUpload.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Upload.jsx
models/: metadata.yaml
openvino file/: best.xml  metadata.yaml
